Working on Tab functionality

--- a/app/views/games/_shop.html.erb
+++ b/app/views/games/_shop.html.erb
@@ -320,4 +320,7 @@
         }
         initializeDeleteButtons();
     });
+    document.addEventListener("DOMContentLoaded", initializeTabs);
+    document.addEventListener("turbolinks:load", initializeTabs);
+    document.addEventListener("turbo:load", initializeTabs);
 </script>
