initial oauth code

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,5 +3,6 @@
   <div>
     <%= link_to 'Login', login_path, class: 'btn' %>
     <%= link_to 'Register', register_path, class: 'btn' %>
+    <%= link_to 'Login with GitHub', '/auth/github', class: 'btn' %>
   </div>
 </div>
