--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -3,3 +3,11 @@
   <%= render 'main' %>
   <%= render 'chat' %>
 </div>
+
+<script>
+    setTimeout(() => {
+        // Code to be executed after the delay
+        console.log("Loading");
+    }, 2000); // 2000 milliseconds (2 seconds) delay
+
+</script>
