fixed errors for heroku

--- a/app/views/games/_main.html.erb
+++ b/app/views/games/_main.html.erb
@@ -340,7 +340,7 @@
 
         renderAllCharacters();
         displayCurrentBiome();
-        refreshTileInfo(newX, newY);
+        refreshTileInfo(x, y);
 
         // I am disabling the buttons on movement and re-enabling them after 0.5 seconds to allow for the movement to
         // refresh.
