--- a/app/views/games/_shop.html.erb
+++ b/app/views/games/_shop.html.erb
@@ -34,7 +34,7 @@
   </div>
 
   <!-- Items Section -->
-  <div id="ItemsSection" class="main-tabcontent text-with-border" style="flex: 1 1 auto; max-height: 100%; overflow-y: auto;">
+  <div id="ItemsSection" class="main-tabcontent text-with-border" style="flex: 1 1 auto; max-height: 100%; overflow-y: auto; padding-left: 10px;">
     <h2 class="text-with-border">Your Items</h2>
     <% if @items.present? %>
       <% @items.each do |item| %>
@@ -53,7 +53,7 @@
   </div>
 
   <!-- Game Section -->
-  <div id="GameSection" class="main-tabcontent" style="flex: 1 0 auto;">
+  <div id="GameSection" class="main-tabcontent" style="flex: 1 0 auto; padding-left: 10px;">
     <h2>Tile</h2>
     <p>Display game-related content here.</p>
   </div>
