added dynamic shards display

--- a/app/views/games/_chat.html.erb
+++ b/app/views/games/_chat.html.erb
@@ -8,6 +8,7 @@
         <p><strong>Username:</strong> <span class="character-value"><%= @current_user.username %></span></p>
         <p><strong>Level:</strong> <span class="character-value"><%= @current_character.level %></span></p>
 
+        <p><strong>Shards: <span class="character-value" id="shard_amount"><%= @current_user.shard_amount %></span></strong>
         <!-- Fancy Health Bar -->
         <div class="health-bar-container">
           <p><strong>HP:</strong>
