--- a/app/views/games/_shop.html.erb
+++ b/app/views/games/_shop.html.erb
@@ -1,4 +1,4 @@
-<div class="game-shop" style="display: flex; flex-direction: column; height: 100%;">
+<div class="game-shop" style="display: flex; flex-direction: column; height: 100%; overflow-y: scroll">
   <!-- Main Tabs -->
   <div class="main-tabs" style="flex: 0 0 auto;">
     <button class="main-tablinks active" data-section="ShopSection">Shop</button>
