Fixed item generation oversight that lead to mis-assigning items to old characters

--- a/app/views/games/_main.html.erb
+++ b/app/views/games/_main.html.erb
@@ -144,9 +144,8 @@
 
                   // Re-fetch the tile to update displayed info
                   refreshTileInfo(x, y);
-
-                  // NEW: Refresh Items Section
                   refreshItems();
+                  updateCharacterInfo();
               } else {
                   refreshTileInfo(x, y);
                   console.error(data.message);
