--- a/app/views/games/_main.html.erb
+++ b/app/views/games/_main.html.erb
@@ -134,7 +134,7 @@
           .then(data => {
               if (data.success) {
                   const treasure = document.getElementById(`treasure`);
-                  if (treasure.innerHTML.startsWith("Shards: ")) {
+                  if (treasure.innerHTML.startsWith("Shards:")) {
                       const amount = Number(treasure.innerHTML.split(":")[1].trim());
 
                       const currentAmount = Number(document.getElementById("shard_amount").innerHTML);
@@ -145,7 +145,6 @@
                   // Re-fetch the tile to update displayed info
                   refreshTileInfo(x, y);
                   refreshItems();
-                  updateCharacterInfo(currentCharacter);
               } else {
                   refreshTileInfo(x, y);
                   console.error(data.message);
@@ -322,6 +321,9 @@
     }
 
     async function regenerateTile(x, y) {
+        const answer = confirm("Attention: regenerating a tile costs 50 shards. Continue?");
+        if (!answer) return;
+
         const gameSection = document.getElementById("GameSection");
         updateGameSection(`
         <h2>Tile Information</h2>
@@ -348,9 +350,12 @@
                 return;
             }
 
+            const currentAmount = Number(document.getElementById("shard_amount").innerHTML);
+
+            document.getElementById("shard_amount").innerHTML = (currentAmount - 50).toString();
+
             // Regeneration successful. The tile should now be updated.
             updateTileInfoSection(data);
-            updateCharacterInfo(data.character)
         } catch (error) {
             console.error("Error regenerating tile:", error);
             updateGameSection("<p>Error regenerating tile.</p>");
