Fixed item generation in shop

--- a/app/views/games/_shop.html.erb
+++ b/app/views/games/_shop.html.erb
@@ -232,7 +232,7 @@
     <h3>${item.name}</h3>
     <p>${item.description}</p>
     <p><strong>Price:</strong> ${item.price}</p>
-    <p><strong>Rarity:</strong> ${item.rarity}</p>
+    <p><strong>Level:</strong> ${item.level}</p>
     <button class="btn-secondary buy" data-item-name="${item.name}" data-item-category="${item.category}" data-item-description="${item.description}" data-item-rarity="${item.rarity}">Buy</button>
   `;
         return itemDiv;
